--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link
       rel="import"
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      async
-    />
+      async />
   </head>
   <body>
     <header id="header">
@@ -25,8 +24,7 @@
         stroke="currentColor"
         fill="none"
         stroke-linecap="round"
-        stroke-linejoin="round"
-      >
+        stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
         <line x1="4" y1="6" x2="20" y2="6"></line>
         <line x1="4" y1="12" x2="20" y2="12"></line>
@@ -57,13 +55,11 @@
               stroke="currentColor"
               fill="none"
               stroke-linecap="round"
-              stroke-linejoin="round"
-            >
+              stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
               <circle cx="12" cy="11" r="3"></circle>
               <path
-                d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
-              ></path>
+                d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"></path>
             </svg>
             <h2>South East, England</h2>
           </span>
@@ -79,77 +75,57 @@
         <img
           src="./assets/images/project-screenshots/photography-page.png"
           alt="#"
-          class="project-card-image"
-        />
+          class="project-card-image" />
         <p class="project-card-description">
-          This is my photography portfolio, the page is made from scratch and
-          the photos are all mine.
+          This is my photography portfolio, the page is made from scratch and the photos are all
+          mine.
         </p>
       </section>
 
       <section class="project-card">
         <h3 class="project-card-title">
-          <a href="projects/pages/higherOrLower/" target="_blank"
-            >Higher or Lower Game</a
-          >
+          <a href="projects/higherOrLower/" target="_blank">Higher or Lower Game</a>
         </h3>
         <img
           src="./assets/images/project-screenshots/higher-or-lower.png"
           alt="#"
-          class="project-card-image"
-        />
-        <p class="project-card-description">
-          This is a simple number based higher or lower game.
-        </p>
+          class="project-card-image" />
+        <p class="project-card-description">This is a simple number based higher or lower game.</p>
       </section>
 
       <section class="project-card">
         <h3 class="project-card-title">
-          <a href="projects/pages/searchEngine/" target="_blank"
-            >Search Engine</a
-          >
+          <a href="projects/searchEngine/" target="_blank">Search Engine</a>
         </h3>
         <img
           src="./assets/images/project-screenshots/search-engine.png"
           alt="#"
-          class="project-card-image"
-        />
+          class="project-card-image" />
         <p class="project-card-description">
-          This is a front-end experiment to make a more functional search engine
-          front end.
+          This is a front-end experiment to make a more functional search engine front end.
         </p>
       </section>
 
       <section class="project-card">
         <h3 class="project-card-title">
-          <a href="projects/pages/wipLandingPage/" target="_blank"
-            >three.js Test</a
-          >
+          <a href="projects/wipLandingPage/" target="_blank">three.js Test</a>
         </h3>
         <img
           src="./assets/images/project-screenshots/wip-landing-page.png"
           alt="#"
-          class="project-card-image"
-        />
-        <p class="project-card-description">
-          A site with a 3d rendered background.
-        </p>
+          class="project-card-image" />
+        <p class="project-card-description">A site with a 3d rendered background.</p>
       </section>
 
       <section class="project-card">
         <h3 class="project-card-title">
-          <a href="projects/pages/skeuomorphicBox/" target="_blank"
-            >Skeuomorphic Box</a
-          >
+          <a href="projects/skeuomorphicBox/" target="_blank">Skeuomorphic Box</a>
         </h3>
         <img
           src="./assets/images/project-screenshots/skeuomorphic-box.png"
           alt="#"
-          class="project-card-image"
-        />
-        <p class="project-card-description">
-          Just a page to chill out and click a box.
-        </p>
+          class="project-card-image" />
+        <p class="project-card-description">Just a page to chill out and click a box.</p>
       </section>
 
       <section class="project-card">
@@ -159,11 +135,8 @@
         <img
           src="./assets/images/project-screenshots/todo-app.png"
           alt="#"
-          class="project-card-image"
-        />
-        <p class="project-card-description">
-          A functional To-Do app made with react.js.
-        </p>
+          class="project-card-image" />
+        <p class="project-card-description">A functional To-Do app made with react.js.</p>
       </section>
     </section>
 
@@ -180,12 +153,10 @@
           understanding to the next level using any resources I can access -
           whether that be: YouTube; the internet in general ;or other people I
           can talk to. -->
-          Sint voluptate esse irure incididunt. Ex dolore fugiat duis do
-          consequat est. Adipisicing et dolore quis minim enim id in dolor eu
-          velit cupidatat exercitation irure. Enim nisi enim elit voluptate
-          tempor. Cupidatat occaecat sunt elit laborum. Ut culpa eu sint sit qui
-          occaecat. Ut consequat est anim ullamco deserunt reprehenderit ut
-          anim.
+          Sint voluptate esse irure incididunt. Ex dolore fugiat duis do consequat est. Adipisicing
+          et dolore quis minim enim id in dolor eu velit cupidatat exercitation irure. Enim nisi
+          enim elit voluptate tempor. Cupidatat occaecat sunt elit laborum. Ut culpa eu sint sit qui
+          occaecat. Ut consequat est anim ullamco deserunt reprehenderit ut anim.
         </p>
       </div>
     </section>
@@ -195,54 +166,25 @@
       <form
         action="https://formsubmit.co/9a8c719f0a3594847970493fd7856eac"
         method="POST"
-        class="contact-form"
-      >
+        class="contact-form">
         <fieldset class="name-area">
           <span>
             <label for="fname">First Name</label>
-            <input
-              type="text"
-              id="fname"
-              name="name"
-              placeholder="Your name.."
-            />
+            <input type="text" id="fname" name="name" placeholder="Your name.." />
           </span>
           <span>
             <label for="lname">Last Name</label>
-            <input
-              type="text"
-              id="lname"
-              name="lastname"
-              placeholder="Your last name.."
-            />
+            <input type="text" id="lname" name="lastname" placeholder="Your last name.." />
           </span>
         </fieldset>
         <label for="email">Email Address</label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Your email address.."
-        />
+        <input type="email" id="email" name="email" placeholder="Your email address.." />
         <label for="subject">Subject</label>
-        <input
-          type="text"
-          id="subject"
-          name="_subject"
-          placeholder="The Subject..."
-        />
+        <input type="text" id="subject" name="_subject" placeholder="The Subject..." />
         <label for="subject">Message</label>
-        <textarea
-          id="message"
-          name="message"
-          placeholder="Hello, I would like to ..."
-        ></textarea>
+        <textarea id="message" name="message" placeholder="Hello, I would like to ..."></textarea>
         <input type="submit" class="contact-form-submit" value="Submit" />
-        <input
-          type="hidden"
-          name="_next"
-          value="https://finharris.github.io/"
-        />
+        <input type="hidden" name="_next" value="https://finharris.github.io/" />
       </form>
     </section>
 
